# Facial-Recognition-Project

./: CMake.cpp  CMakeLists.txt  CMakeProject1.cpp  README.md
